# yaclia

./: .clang-format  CMakeLists.txt  head.h  main.cc  main.h  readme.md
app/test_one_window/: CMakeLists.txt  main.cc
signal/: UnixSignal.h
system/: sys_call.cc  sys_call.h
system/signal/: UnixSignal.h  WindowsSignal.h  signal.h
util/: ConsoleStatus.h  key_input.cc  key_input.h  ncurses_key.h  string_process.h  sys_call.cc  sys_call.h  terminal.cc  terminal.h
util/observer_pattern/: Publisher.trait.h  Subscriber.trait.h
view/container/: ConsoleConfig.cc  ConsoleConfig.h  Field.h  FieldContainer.cc  FieldContainer.h  FieldLayout.cc  FieldLayout.h  Focusable.cc  Focusable.h  Layout.h  Screen.cc  Screen.h  TextField.cc  TextField.h  VerticalScrollSelectField.cc  VerticalScrollSelectField.h  VerticalScrollSelectLayout.cc  VerticalScrollSelectLayout.h  ViewContainer.h  ViewDrawInfo.h  ViewInfo.h  Window.cc  Window.h  WindowFrameStyle.h  WindowStatusIcon.h  readme.md
view/instance/: OpenNewWindow.cc  YacliaMainMenu.h
view/manager/: ViewManager.cc  ViewManager.h
window/: ConsoleConfig.cc  ConsoleConfig.h
